ICUCtypeData: Fix conversion of surrogate pairs.

If a multibyte Unicode character is specified to MultibyteToWchar
one byte at a time, then resetting the state will lose the data
for the second character. We thus shouldn't re-read but instead
keep the existing character and just read the second one.

Fixes #19035.
(cherry picked from commit 05599114937b2bc98f0494fd8bcbbc0d6bd68a2c)

Change-Id: Id96595440d3cc88f6358355c9c46502f46c4b71a
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8199
Reviewed-by: waddlesplash <waddlesplash@gmail.com>