src/system/libroot/add-ons/icu/ICUCtypeData.cpp
@@ -235,13 +235,11 @@ ICUCtypeData::MultibyteToWchar(wchar_t* wcOut, const char* mb, size_t mbLen,
 	size_t targetLengthUsed = (size_t)(target - targetBuffer);
 
 	if (U16_IS_LEAD(targetBuffer[0])) {
-		// we have a surrogate pair, so re-read with enough space for a pair
-		// of characters instead
+		// we have a surrogate pair, read the second character
 		TRACE(("MultibyteToWchar(): have a surrogate pair\n"));
-		ucnv_resetToUnicode(converter);
-		buffer = mb;
-		target = targetBuffer;
-		ucnv_toUnicode(converter, &target, target + 2, &buffer, buffer + mbLen,
+		icuStatus = U_ZERO_ERROR;
+		ucnv_toUnicode(converter, &target, target + 2 - targetLengthUsed,
+			&buffer, buffer + mbLen - sourceLengthUsed,
 			NULL, FALSE, &icuStatus);
 		sourceLengthUsed = buffer - mb;
 		targetLengthUsed = (size_t)(target - targetBuffer);
@@ -257,7 +255,7 @@ ICUCtypeData::MultibyteToWchar(wchar_t* wcOut, const char* mb, size_t mbLen,
 		TRACE(("MultibyteToWchar(): illegal character sequence\n"));
 		ucnv_resetToUnicode(converter);
 		result = B_BAD_DATA;
-	} else 	if (targetLengthUsed == 0) {
+	} else if (targetLengthUsed == 0) {
 		TRACE(("MultibyteToWchar(): incomplete character (len=%lu)\n", mbLen));
 		for (size_t i = 0; i < mbLen; ++i)
 			TRACE(("\tbyte %lu: %x\n", i, mb[i]));
